--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=timeattendance
 
 # MySQL connection
-spring.datasource.url=jdbc:mysql://localhost:3307/time_attendance?useSSL=false&serverTimezone=Asia/Bangkok
-spring.datasource.username=root
-spring.datasource.password=Root_1234
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/time_attendance?useSSL=false&serverTimezone=UTC
+spring.datasource.username=time_user
+spring.datasource.password=password123
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 # JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
